# openblink_XIAO_nRF54L15_Sense

./: CMakeLists.txt  README.ja.md  README.md  README.zh-CN.md  prj.conf
doc/: mruby_api.ja.md  mruby_api.md  mruby_api.zh-CN.md
src/: main.c
src/api/: blink.c  input.c  led.c  pixels.c  symbol.c  symbol.h
src/app/: blink.c  comm.c  init.c  mrubyc_vm.c  mrubyc_vm.h
src/drv/: ble.c  gpio.c  gpio.h  led_strip.c  led_strip.h
src/rb/: slot1.h  slot1.rb  slot2.h  slot2.rb
